# posts-rs

./: Cargo.toml
src/: main.rs
